# Graphics

./: CMakeLists.txt  tmp.txt
Makefile/: Makefile  ciao.frag  ciao.vert  graphics  imgui.ini
backends/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
glad/: glad.c  glad.h
headers/: VAEBO.h  canva.h  shaderClass.h  shaderGenerator.h  shapes.h  widgets.h
imgui/: imgui.h
src/: VAEBO.cpp  canva.cpp  main.cpp  shaderGenerator.cpp  shaders.cpp  shapes.cpp  widgets.cpp
src/Shaders/: defaultFragShader.frag  uniformVertShader.vert
